[Home] Fix Button spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,6 @@
 
-.buttonContainer {
-    display: flex;
-    justify-content: space-evenly;
-    align-self: center;
+.buttonContainer > span {
+    margin-right: 20px;
 }
 
 .downloadBoxes {
